fix(context-menu): z-index of menu to show at front

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{font-size: 16px;font-family: 'Roboto';}
 .header-cell{position: relative;text-align: center;background: #e8eaed;color: #626262;}
 .header-cell:hover{background: #c7cbd1}
 
-.context-menu-list{list-style: none;padding: 0;position: absolute; background: #fff; border: 1px solid #c7c7c7;}
+.context-menu-list{list-style: none;padding: 0;position: absolute; background: #fff; border: 1px solid #c7c7c7;z-index: 99;}
 .context-menu-item{padding: 0 5px;}
 .context-menu-item:hover{background: #c7c7c7}
 .context-menu-option{text-align: center;border-bottom: 1px solid #c7c7c7;color: #333;padding: 15px;width: 100%}
